--- a/src/app.html
+++ b/src/app.html
@@ -3,9 +3,8 @@
   <title>JesseJesse</title>
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png"> 
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/static/favicon.svg">
+    <link rel="icon" type="image/png" href="/static/favicon.png">
     <meta name="viewport" content="width=device-width" />
     %sveltekit.head%
   </head>
